--- a/src/musetools/Test_Muse_data_represetation.ipynb
+++ b/src/musetools/Test_Muse_data_represetation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: FITSFixedWarning: The WCS transformation has more axes (3) than the image it is associated with (2) [astropy.wcs.wcs]\n",
+      "WARNING: FITSFixedWarning: 'cdfix' made the change 'Success'. [astropy.wcs.wcs]\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.io import fits\n",
     "import numpy as np\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +83,7 @@
        "(205, 300)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -99,6 +108,24 @@
     "ax.plot(xcen,ycen,'+',color='r',markersize=12)\n",
     "ax.set_ylim([205,300])\n",
     "#plt.xlim([2,40])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.8682560314102 -13.437109635657617\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=w.pixel_to_world_values(xcen[0],ycen[0],0)\n",
+    "print(s[0],s[1])"
    ]
   },
   {
